--- a/first code.html
+++ b/first code.html
@@ -1,7 +1,9 @@
+<!DOCTYPE html>
 <html>
-<head>
-</head>
 <body>
-<h1>My first code</h1>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
 </body>
 </html>
